<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".activities.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/app_name_caps"
        android:textColor="#488EFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextEmailValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:layout_marginBottom="5dp"
        android:text="" />

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editTextPasswordValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:layout_marginBottom="5dp"
        android:text="" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#488EFF"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnOpenRegisterScreen"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="0dp"
            android:text="@string/openRegisterScreen"
            android:textAllCaps="false"
            android:textColor="#6A6969"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/btnForgotPassword"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/btnOpenRegisterScreen"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#FFFFFF"
            android:padding="0dp"
            android:text="@string/openForgotPassword"
            android:textAllCaps="false"
            android:textColor="#6A6969"

            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>